# ai-data-analyst

./: .env.example  .gitignore  .pyre_configuration  README.md  database.py  diagnose.py  main.py  migrate_questions.py  models.py  pyproject.toml  supabase_schema.sql  test.csv  test_err.txt  vercel.json  verify_api.py
frontend/: eslint.json  eslint_output.txt  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/forgot-password/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/reset-password/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/(auth)/verify-email/: page.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/documents/: page.tsx
frontend/src/app/(dashboard)/profile/: page.tsx
frontend/src/components/: ProfessionalDashboard.tsx
frontend/src/components/layout/: AuthLayout.tsx  DashboardLayout.tsx  DashboardNavbar.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  DataNeuron.tsx  Input.tsx
frontend/src/lib/: api.ts  auth.ts  store.ts
routers/: ai.py  auth.py  chat.py  datasets.py  documents.py  users.py
schemas/: ai.py  auth.py  chat.py  datasets.py  documents.py  users.py
services/: academic_context.py  agent.py  cache.py  document_processor.py  document_qa.py  email.py  logger.py  memory.py  profiler.py  python_executor.py  sql_validator.py  utils.py
